Added label to specialinput list to advise screenreader users that list buttons are inoperable in the current context

--- a/src/player.html
+++ b/src/player.html
@@ -69,7 +69,7 @@
 			</div>
 			<details id='specialInput' class='down'>
 				<summary id='specialInputHead'>Special Characters</summary>
-				<ul id='specialInputBody'>
+				<ul id='specialInputBody' aria-label='Special character drawer. To insert a special character into a word, use the up arrow key with the desired character space selected.'>
 					<li tabindex='0'>Á</li>
 					<li tabindex='0'>À</li>
 					<li tabindex='0'>Â</li>
