tweaked dialog box focus and dictation (again), added alert dialog state when widget completes

--- a/src/player.html
+++ b/src/player.html
@@ -139,7 +139,7 @@
 					tabindex='0'
 					class='submit action-button'></button>
 			</dialog>
-			<dialog id='introbox' aria-modal='true' tabindex='0' aria-describedby='introcaption'>
+			<dialog id='introbox' aria-modal='true' role='alertdialog' aria-describedby='introcaption'>
 				<header>How to Play Crossword</header>
 				<div class='content'>
 					<div id='introcaption'>Fill in each <span class='bold'>word</span> or <span class='bold'>phrase</span> based on the associated clue on the right. Every cell contains a single letter. Letters at intersections should be correct for both words!</div>
@@ -152,7 +152,7 @@
 				<button id='intro_instructions' class='cancel'>Keyboard instructions</button>
 				<button id='intro_dismiss' class='submit action-button' aria-label='Dismiss intro dialog and select game board.'>Let's Go</button>
 			</dialog>
-			<dialog id='tutorialbox' aria-modal='true' tabindex='0' aria-describedby='tutorialcaption'>
+			<dialog id='tutorialbox' aria-modal='true' role='alertdialog' aria-describedby='tutorialcaption'>
 				<div id='tutorialcaption'>
 					<header>Keyboard Controls</header>
 						<p>With the board selected, use the <span class='bold'>left</span> and <span class='bold'>right</span> keys to cycle between words.</p>
