add letter focusing/zoom

--- a/src/player.html
+++ b/src/player.html
@@ -45,10 +45,16 @@
 					title='Print'
 					aria-label='Print. Press the Enter key to produce a printout for this Crossword puzzle.'>
 				</button>
-				<button id='zoomout'
-					class='icon-zoomout'
+				<!-- <button id='center'
+					class='icon-center'
 					title='Zoom Out'
 					aria-label='Zoom Out. Press the Enter key to select the letter grid.'>
+				</button> -->
+				<button id='focus-letter'
+					class='icon-zoomin'
+					title='Focus'
+					aria-label='Focus. Press the Enter key to toggle zooming into the current letter.'>
+					<span id="focus-text"></span>
 				</button>
 			</div>
 			<div id='board' class="screen board">
