--- a/src/scoreScreen.html
+++ b/src/scoreScreen.html
@@ -33,8 +33,8 @@
 
 		<div id='t_hints' style='display:none' class="clue">
 			<em data-i='{{i}}'>{{hintPrefix}}:</em><br>
-			<span class="clueHeader">Clue: </span>{{question}}<br>
-			<span class="clueHeader">Answer: </span>{{answer}}<br>
+			<span class="clueHeader">CLUE</span><br>{{question}}<br><br>
+			<span class="clueHeader">ANSWER</span><br><span class="answer">{{answer}}</span><br>
 		</div>
 
 		<div id="bottomOptions">
