add materia logo repeating bg

--- a/src/player.html
+++ b/src/player.html
@@ -164,7 +164,7 @@
 			<dialog id='introbox' aria-modal='true' role='alertdialog' aria-describedby='introcaption'>
 				<header>How to Play Crossword</header>
 				<div class='content'>
-					<div id='introcaption'>Fill in each <span class='bold'>word</span> or <span class='bold'>phrase</span> based on the associated clue on the right. Every cell contains a single letter. Letters at intersections should be correct for both words!</div>
+					<div id='introcaption'>Fill in each <span class='bold'>word</span> or <span class='bold'>phrase</span> based on the associated clue on the right. Every cell contains a single letter. Letters at intersections should be correct for both words!<br><br>You can drag to pan the board if it ever goes off-screen.</div>
 					<aside class='image-frame' aria-hidden='true'>
 						<img id='preview-img-1' src='assets/crossword-intro-frame-1.svg' alt='Crossword preview demo image 1 of 3' />
 						<img id='preview-img-2' src='assets/crossword-intro-frame-2.svg' alt='Crossword preview demo image 2 of 3' />
