clean up, ctrl now focuses, pan w/ focus blocked

--- a/src/player.html
+++ b/src/player.html
@@ -181,6 +181,7 @@
 						<p>Use the <span class='bold'>down</span> key to select the hint and free word buttons associated with the selected clue. Use the <span class='bold'>up</span> key to return to the board.</p>
 						<p>When the current letter is selected, use the <span class='bold'>up</span> key to cycle through the special character drawer. <span class='bold'>Enter</span> will insert the selected character at the current letter. The <span class='bold'>down</span> key will return you to the board.</p>
 						<p>Use <span class='bold'>tab</span> and <span class='bold'>shift-tab</span> to cycle through letters in the current word before defocusing the board.</p>
+						<p>Use <span class='bold'>control</span> to toggle the camera's letter focusing.</p>
 				</div>
 				<button id='tutorial_dismiss' aria-label='Dismiss.' class='submit action-button'>Okay</button>
 			</dialog>
