improved navigation on mobile score

--- a/src/scoreScreen.html
+++ b/src/scoreScreen.html
@@ -54,7 +54,7 @@
 		</div>
 
 		<div id="bottomOptions">
-				Show Correct Answers
+				Show Correct
 				<input type="checkbox" id="hide-correct"/>
 				<label for="hide-correct" class="checktoggle"></label>
 			</div>
